--- a/作業11/index.html
+++ b/作業11/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-<div class="box" id="box01">BMD</div>
+<div class="box" id="box01">B2B36</div>
 <input type="button" id="btn1" value="方形"><br>
 <input type="button" id="btn2" value="圓形"><br>
 <input type="button" id="btn3" value="B2B36"><br>
